fixing the blurry canvas

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ button span .material-symbols-outlined{
         margin-top: 3.5rem;
         left: 0;
         right: 0;
-        will-change: transform; /* Hint to the browser to use hardware acceleration */
+        /* will-change: transform; Hint to the browser to use hardware acceleration */
         transform: translateZ(0); /* Force hardware acceleration */
     }
     .flex{
